--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "@sentry/node": "5.4.3",
@@ -28,9 +30,11 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.1.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
     "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.1",
     "sucrase": "^3.12.1"
   }
 }
