feat: Adding build script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "build": "sucrase ./src -d ./dist --transform imports",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
