--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^1.19.1",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.1",
-    "sucrase": "^3.12.1"
+    "sucrase": "^3.12.1",
+    "supertest": "^4.0.2"
   }
 }
