--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
     "jest": "^25.1.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
