feat: Sending order details mail

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,18 @@ DB_USER=postgres
 DB_PASS=docker
 DB_NAME=fastfeet
 
+# Redis
+
+REDIS_PATH=127.0.0.1
+REDIS_PORT=6379
+
+# Mail
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
+
 # Sentry
 
 SENTRY_DSN=
