--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "build": "sucrase ./src -d ./dist --transform imports",
+    "dev": "npm-run-all -p dev:*",
+    "dev:start": "nodemon src/server.js",
+    "dev:queue": "node -r sucrase/register src/queue.js",
+    "build": "sucrase ./src -d ./dist --transforms imports",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "NODE_ENV=test jest",
     "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
@@ -13,13 +15,16 @@
   "dependencies": {
     "@sentry/node": "5.4.3",
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.2",
     "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
@@ -39,6 +44,7 @@
     "faker": "^4.1.0",
     "jest": "^25.1.0",
     "nodemon": "^1.19.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.1",
